--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ concurrency:
 env:
   USER_NAME: ${{ secrets.USER_NAME }}
   USER_PASSWORD: ${{ secrets.USER_PASSWORD }}
+  ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
 
 jobs:
   linux_os:
